@@ -322,7 +322,8 @@ class Fichinter extends CommonObject
 
 	/**
 	 *    \brief      Retourne le libelle du statut
-	 *    \return     string      Libelle
+	 *    \param      mode        0=long label, 1=short label, 2=Picto + short label, 3=Picto, 4=Picto + long label, 5=Short label + Picto
+	 * 	  \return     string      Libelle
 	 */
 	function getLibStatut($mode=0)
 	{
@@ -332,6 +333,7 @@ class Fichinter extends CommonObject
 	/**
 	 *    \brief      Renvoi le libelle d'un statut donne
 	 *    \param      statut      id statut
+	 *    \param      mode        0=long label, 1=short label, 2=Picto + short label, 3=Picto, 4=Picto + long label, 5=Short label + Picto
 	 *    \return     string      Libelle
 	 */
 	function LibStatut($statut,$mode=0)
