@@ -45,6 +45,7 @@ ListPredefinedInvoicesAssociatedProject=List of customers' predefined invoices a
 ListSupplierOrdersAssociatedProject=List of suppliers' orders associated with the project
 ListSupplierInvoicesAssociatedProject=List of suppliers' invoices associated with the project
 ListContractAssociatedProject=List of contracts associated with the project
+ListActionsAssociatedProject=List of actions associated with the project
 ActivityOnProjectThisWeek=Activity on project this week
 ActivityOnProjectThisMonth=Activity on project this month
 ActivityOnProjectThisYear=Activity on project this year
